<resources>
    <string name="app_name">PZ27_GatunovAP_PR20106</string>
    <string name="logobtn">logobtn</string>
    <string name="logo">TODO</string>
    <string name="login">login</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_a_new_account">Create A New Account?</string>
    <string name="menuBtn">TODO1</string>
    <string name="car1">TODO3</string>
    <string name="car2">TODO2</string>
    <string name="car3">TODO2</string>
    <string name="userField">User</string>
    <string name="settings">Settings</string>
    <string name="username">UserName</string>
    <string name="_15_hours">15 hours</string>
    <string name="drive">Drive</string>
    <string name="_1510">$1510</string>
    <string name="paid">Paid</string>
    <string name="todo2">TODO2</string>
    <string name="email">Email:</string>
</resources>