<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signbg"
    tools:context=".SignScreen">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="317dp"
        android:layout_height="41dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <LinearLayout
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/login"
                app:srcCompat="@drawable/login"
                tools:ignore="ImageContrastCheck" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <EditText
            android:id="@+id/loginField"
            android:layout_width="265dp"
            android:layout_height="35dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="1dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#9A9A9A"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="317dp"
        android:layout_height="41dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.058">

        <LinearLayout
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/login"
                app:srcCompat="@drawable/password"
                tools:ignore="ImageContrastCheck" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <EditText
            android:id="@+id/passwrodField"
            android:layout_width="265dp"
            android:layout_height="37dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="1dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#9A9A9A"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

    </FrameLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/sign_in"
        android:onClick="signInClick"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signUpClick"
        android:text="@string/create_a_new_account"
        android:textColor="#9A9A9A"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.795"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>